cambios en solicitud

--- a/SAF.Web/Views/Solicitud/Index.cshtml
+++ b/SAF.Web/Views/Solicitud/Index.cshtml
@@ -30,8 +30,8 @@
         <div class="col-md-12">
             <button type="button" class="btn btn-primary" id="btnNuevaSolicitud"><i class="fa fa-file-o"></i>&nbsp;Generar Solicitud de Actualizacion</button>
         </div>
-    </div> 
-</div> 
+    </div>
+</div>
 
 @section scripts {
 
@@ -69,7 +69,7 @@
                             "render": function (data, type, row) {
                                 if ('@Convert.ToInt32(Session["sessionTipoUsuario"])' == '@Convert.ToInt32(Tipo.TipoUsuarioExtranet.SociedadAuditoria)')
                                     return '<center><button class="btn btn-primary" title="Abrir" type="button" onclick="editarSolicitudSOA(' + row[0] + ');"><i class="fa fa-search-plus"></i></button></center>';
-                                else 
+                                else
                                     return '<center><button class="btn btn-primary" title="Abrir" type="button" onclick="editarSolicitudAuditor(' + row[0] + ');"><i class="fa fa-search-plus"></i></button></center>';
                             }
                         },
@@ -96,5 +96,27 @@
             });
         }
 
+        $("#btnNuevaSolicitud").click(function () { crearNuevaSolicitud() });
+
+        function crearNuevaSolicitud() {
+            bootbox.confirm(parametros.general.mensajeConfirmacion, function (result) {
+                confirmaNuevaSolicitud();
+            });
+        };
+
+        function confirmaNuevaSolicitud(id) {
+            $.ajax({
+                url: '@Url.Action("crearNuevaSolicitud")',
+                type: 'POST',
+                async: false,
+                data: { id: id },
+                success: function (result) {
+                    if (result.Exito)
+                        window.location.href = '@Url.Action("crearNuevaSolicitud", "Solicitud", new { id = "_id_" })'.replace("_id_", result.Data);
+                    else
+                        mostrarNotificacion(result);
+                }
+            });
+        };
     </script>
 }
