--- a/SAF.Web/Views/Solicitud/_capacitacion.cshtml
+++ b/SAF.Web/Views/Solicitud/_capacitacion.cshtml
@@ -90,7 +90,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                <button type="button" id="btnGuardarCapacitacion" class="btn btn-primary"><i class="fa fa-close"></i>&nbsp;Guardar</button>
+                <button type="button" id="btnGuardarCapacitacion" class="btn btn-primary"><i class="fa fa-save"></i>&nbsp;Guardar</button>
             </div>
         </div>
     </div>
@@ -104,5 +104,9 @@
 
         var result = jQuery.parseJSON(resultText);
         mostrarNotificacion(result);
+        if (result.Exito) {            
+            cargarCapacitaciones();
+            $("#dlgRegistroCapacitacion").modal('hide');
+        }
     });
 </script>
